--- a/app/src/main/res/layout/grid_item_movie.xml
+++ b/app/src/main/res/layout/grid_item_movie.xml
@@ -7,10 +7,12 @@
         android:id="@+id/ivPoster"
         android:src="@mipmap/ic_launcher"
         android:contentDescription="@string/poster_label"
+        android:scaleType="fitXY"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent" />
 
     <TextView
+        android:visibility="gone"
         android:id="@+id/tvTitle"
         android:text="@string/app_name"
         android:textAlignment="center"
