--- a/app/src/main/res/layout/activity_movie.xml
+++ b/app/src/main/res/layout/activity_movie.xml
@@ -67,11 +67,10 @@
             app:layout_constraintTop_toBottomOf="@+id/tvDuration" />
 
         <CheckBox
-            android:id="@+id/checkBox"
+            android:id="@+id/chkFavorite"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:button="@android:drawable/btn_star_big_off"
             android:text="Favoritar"
             android:textColor="@android:color/darker_gray"
             app:layout_constraintStart_toStartOf="@+id/tvRate"
