--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,33 @@
     <dimen name="padding_h_title">15dp</dimen>
     <dimen name="padding_title_top">35dp</dimen>
     <dimen name="padding_title_bottom">23dp</dimen>
+    <dimen name="item_padding">10dp</dimen>
+    <dimen name="margin_line">1dp</dimen>
+    <dimen name="review_space_bottom">5dp</dimen>
+    <dimen name="item_title_size">14sp</dimen>
+    <dimen name="trailer_indent">20dp</dimen>
+    <dimen name="progress_min_size">100dp</dimen>
+    <dimen name="progress_font_size">20sp</dimen>
+    <dimen name="no_data_padding">20dp</dimen>
+    <dimen name="section_text_vertical_padding">8dp</dimen>
+    <dimen name="section_text_top">15dp</dimen>
+    <dimen name="section_title_font_size">18sp</dimen>
+    <dimen name="section_list_margin">20dp</dimen>
+    <dimen name="movie_divisor_height">1dp</dimen>
+    <dimen name="movie_divisor_h_margin">8dp</dimen>
+    <dimen name="movie_division_top_margin">15dp</dimen>
+    <dimen name="review_top_margin">24dp</dimen>
+    <dimen name="review_h_margin">8dp</dimen>
+    <dimen name="review_width">0dp</dimen>
+    <dimen name="favorite_top_margin">8dp</dimen>
+    <dimen name="rate_top_margin">8dp</dimen>
+    <dimen name="rate_font_size">10sp</dimen>
+    <dimen name="duration_font_size">14sp</dimen>
+    <dimen name="duration_top_margin">8dp</dimen>
+    <dimen name="year_start_margin">32dp</dimen>
+    <dimen name="year_font_size">18sp</dimen>
+    <dimen name="year_top_margin">8dp</dimen>
+    <dimen name="image_start_margin">8dp</dimen>
+    <dimen name="image_top_margin">8dp</dimen>
+    <dimen name="image_min_height">150dp</dimen>
 </resources>
