--- a/app/src/main/res/layout/review_item.xml
+++ b/app/src/main/res/layout/review_item.xml
@@ -4,14 +4,17 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:background="@color/white"
-    android:layout_marginBottom="1dp"
+    android:paddingTop="@dimen/item_padding"
+    android:paddingBottom="@dimen/item_padding"
+    android:layout_marginBottom="@dimen/margin_line"
     android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/tvAuthor"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="14sp"
+        android:textSize="@dimen/item_title_size"
+        android:layout_marginBottom="@dimen/review_space_bottom"
         android:textStyle="bold" />
     <TextView
         android:id="@+id/tvReview"
